--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
             <div class="header__main">
                 <ul class="header__links">
                     <li class="header__link-wrapper">
-                        <a href="./index.html#home" class="header__link"> Home </a>
+                        <a href="#home" class="header__link"> Home </a>
                     </li>
                     <li class="header__link-wrapper">
-                        <a href="./index.html#about" class="header__link">About </a>
+                        <a href="#about" class="header__link">About </a>
                     </li>
                     <li class="header__link-wrapper">
-                        <a href="./index.html#experience" class="header__link">
+                        <a href="#experience" class="header__link">
                             Experience
                         </a>
                     </li>
                     <li class="header__link-wrapper">
-                        <a href="./index.html#projects" class="header__link">
+                        <a href="#projects" class="header__link">
                             Projects
                         </a>
                     </li>
                     <li class="header__link-wrapper">
-                        <a href="./index.html#contact" class="header__link"> Contact </a>
+                        <a href="#contact" class="header__link"> Contact </a>
                     </li>
                 </ul>
                 <div class="header__main-ham-menu-cont">
