--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
                         <a href="https://www.github.com/rmargar/" target="_blank" rel="noreferrer" href="#">
                             <img class="main-footer__icon" src="./assets/png/github-ico.png" alt="icon" />
                         </a>
-                        <a href="https://www.instagram.com/mrtnzzz__/" target="_blank" rel="noreferrer" href="#">
+                        <a href="https://www.instagram.com/mrtnzzz___/" target="_blank" rel="noreferrer" href="#">
                             <img class="main-footer__icon" src="./assets/png/insta-ico.png" alt="icon" />
                         </a>
-                        <a href="https://www.instagram.com/mrtnzzz__/" target="_blank" rel="noreferrer" href="#">
+                        <a href="https://soundcloud.com/mrtnzzz" target="_blank" rel="noreferrer" href="#">
                             <img class="main-footer__icon" src="./assets/png/soundcloud.png" alt="icon" />
                         </a>
                     </div>
