feat: serve static files with go router

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Ricardo Martinez</title>
 
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="/static/stylesheets/main.css" type="text/css" />
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
         <div class="header__content">
             <div class="header__logo-container">
                 <div class="header__logo-img-cont">
-                    <img src="./assets/jpeg/rmargar.jpeg" alt="Ram Maheshwari Logo Image" class="header__logo-img" />
+                    <img src="/static/assets/jpeg/rmargar.jpeg" alt="Ram Maheshwari Logo Image" class="header__logo-img" />
                 </div>
                 <a href="#home"><span class="header__logo-sub">Ricardo Martinez</span></a>
             </div>
@@ -50,8 +50,8 @@
                     </li>
                 </ul>
                 <div class="header__main-ham-menu-cont">
-                    <img src="./assets/svg/ham-menu.svg" alt="hamburger menu" class="header__main-ham-menu" />
-                    <img src="./assets/svg/ham-menu-close.svg" alt="hamburger menu close"
+                    <img src="/static/assets/svg/ham-menu.svg" alt="hamburger menu" class="header__main-ham-menu" />
+                    <img src="/static/assets/svg/ham-menu-close.svg" alt="hamburger menu close"
                         class="header__main-ham-menu-close d-none" />
                 </div>
             </div>
@@ -60,19 +60,19 @@
             <div class="header__sm-menu-content">
                 <ul class="header__sm-menu-links">
                     <li class="header__sm-menu-link">
-                        <a href="./index.html"> Home </a>
+                        <a href="/static/index.html"> Home </a>
                     </li>
 
                     <li class="header__sm-menu-link">
-                        <a href="./index.html#about"> About </a>
+                        <a href="/static/index.html#about"> About </a>
                     </li>
 
                     <li class="header__sm-menu-link">
-                        <a href="./index.html#projects"> Projects </a>
+                        <a href="/static/index.html#projects"> Projects </a>
                     </li>
 
                     <li class="header__sm-menu-link">
-                        <a href="./index.html#contact"> Contact </a>
+                        <a href="/static/index.html#contact"> Contact </a>
                     </li>
                 </ul>
             </div>
@@ -120,70 +120,70 @@
             <div class="about_skills">
                 <h2 class="about_header">Skills and tecnologies</h2>
                 <div class="about_skills_list">
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/python.svg" alt="Python">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/python.svg" alt="Python">
                         <figcaption>Python</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/fastapi.svg" alt="FastAPI">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/fastapi.svg" alt="FastAPI">
                         <figcaption>FastAPI</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/celery.svg" alt="Celery">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/celery.svg" alt="Celery">
                         <figcaption>Celery</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/pandas.svg" alt="Pandas">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/pandas.svg" alt="Pandas">
                         <figcaption>Pandas</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/golang.svg" alt="Golang">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/golang.svg" alt="Golang">
                         <figcaption>Golang</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/rest-api.svg" alt="RestAPI">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/rest-api.svg" alt="RestAPI">
                         <figcaption>Rest APIs</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/test.svg" alt="TDD">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/test.svg" alt="TDD">
                         <figcaption>TDD</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/apache.svg" alt="Airflow">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/apache.svg" alt="Airflow">
                         <figcaption>Airflow</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/postgresql.svg" alt="PostgreSQL">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/postgresql.svg" alt="PostgreSQL">
                         <figcaption>PostgreSQL</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/mongodb.svg" alt="MongoDB">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/mongodb.svg" alt="MongoDB">
                         <figcaption>MongoDB</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/docker.svg" alt="Docker">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/docker.svg" alt="Docker">
                         <figcaption>Docker</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/kubernetes.svg" alt="Kubernetes">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/kubernetes.svg" alt="Kubernetes">
                         <figcaption>Kubernetes</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/aws.svg" alt="AWS">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/aws.svg" alt="AWS">
                         <figcaption>AWS</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/kafka.svg" alt="Kafka">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/kafka.svg" alt="Kafka">
                         <figcaption>Kafka</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/github.svg" alt="GitHub Actions">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/github.svg" alt="GitHub Actions">
                         <figcaption>GitHub Actions</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/terraform.svg" alt="Terraform">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/terraform.svg" alt="Terraform">
                         <figcaption>Terraform</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/bash.svg" alt="Bash">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/bash.svg" alt="Bash">
                         <figcaption>Bash</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/linux.svg" alt="Linux">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/linux.svg" alt="Linux">
                         <figcaption>Linux</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/javascript.svg" alt="JavaScript">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/javascript.svg" alt="JavaScript">
                         <figcaption>JavaScript</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/html5.svg" alt="HTML">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/html5.svg" alt="HTML">
                         <figcaption>HTML</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/css3.svg" alt="CSS">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/css3.svg" alt="CSS">
                         <figcaption>CSS</figcaption>
                     </figure>
-                    <figure class="about_skill_box"><img src="./assets/svg/logos/react.svg" alt="React">
+                    <figure class="about_skill_box"><img src="/static/assets/svg/logos/react.svg" alt="React">
                         <figcaption>React</figcaption>
                     </figure>
                 </div>
@@ -208,7 +208,7 @@
                             <li>And that</li>
                         </ul>
                     </div>
-                    <div class="experience-logo"><img src="./assets/png/hellofresh.png"></div>
+                    <div class="experience-logo"><img src="/static/assets/png/hellofresh.png"></div>
                 </div>
                 <div class="container-experience">
                     <div class="experience-description">
@@ -221,7 +221,7 @@
                             <li>And that</li>
                         </ul>
                     </div>
-                    <div class="experience-logo"><img src="./assets/png/searchwing.png"></div>
+                    <div class="experience-logo"><img src="/static/assets/png/searchwing.png"></div>
                 </div>
             </div>
         </div>
@@ -235,7 +235,7 @@
             <div class="projects-content">
                 <div class="projects-row">
                     <div class="projects-row-img-cont">
-                        <img src="./assets/png/prototype-fund.png" alt="Software Screenshot" class="projects-row-img"
+                        <img src="/static/assets/png/prototype-fund.png" alt="Software Screenshot" class="projects-row-img"
                             loading="lazy" />
                     </div>
                     <div class="projects-row-content">
@@ -294,16 +294,16 @@
                     <h2 class="footer-social-header">Social</h2>
                     <div class="footer-social-cont">
                         <a href="https://www.linkedin.com/in/ricmargar/" target="_blank" rel="noreferrer" href="#">
-                            <img class="main-footer__icon" src="./assets/png/linkedin-ico.png" alt="icon" />
+                            <img class="main-footer__icon" src="/static/assets/png/linkedin-ico.png" alt="icon" />
                         </a>
                         <a href="https://www.github.com/rmargar/" target="_blank" rel="noreferrer" href="#">
-                            <img class="main-footer__icon" src="./assets/png/github-ico.png" alt="icon" />
+                            <img class="main-footer__icon" src="/static/assets/png/github-ico.png" alt="icon" />
                         </a>
                         <a href="https://www.instagram.com/mrtnzzz___/" target="_blank" rel="noreferrer" href="#">
-                            <img class="main-footer__icon" src="./assets/png/insta-ico.png" alt="icon" />
+                            <img class="main-footer__icon" src="/static/assets/png/insta-ico.png" alt="icon" />
                         </a>
                         <a href="https://soundcloud.com/mrtnzzz" target="_blank" rel="noreferrer" href="#">
-                            <img class="main-footer__icon" src="./assets/png/soundcloud.png" alt="icon" />
+                            <img class="main-footer__icon" src="/static/assets/png/soundcloud.png" alt="icon" />
                         </a>
                     </div>
                 </div>
