feat: send email

--- a/static/index.html
+++ b/static/index.html
@@ -269,7 +269,7 @@
                     </div>
                     <div class="contact-form-field">
                         <label class="contact-form-label" for="email">Email</label>
-                        <input required class="contact-form-input" id="post-email" type="text"
+                        <input required class="contact-form-input" id="post-email" type="email"
                             placeholder="Enter your email" name="email">
                     </div>
                     <div class="contact-form-field">
