refactor: use co-routine to send email

--- a/static/submit.html
+++ b/static/submit.html
@@ -1,3 +1,6 @@
 <body>
-    Thank you!
+    <md-block markdown="1">*Thanks* for contacting me! Will get back to you `ASAP`.
+    </md-block>
+    <a href="./index.html" > Go back</a>
 </body>
+<script type="module" src="https://md-block.verou.me/md-block.js"></script>
