feat: add template for posts

--- a/static/index.html
+++ b/static/index.html
@@ -48,6 +48,9 @@
                     <li class="header__link-wrapper">
                         <a href="#contact" class="header__link"> Contact </a>
                     </li>
+                    <li class="header__link-wrapper">
+                        <a href="/blog" class="header__link"> Blog </a>
+                    </li>
                 </ul>
                 <div class="header__main-ham-menu-cont">
                     <img src="/static/assets/svg/ham-menu.svg" alt="hamburger menu" class="header__main-ham-menu" />
@@ -72,7 +75,10 @@
                     </li>
 
                     <li class="header__sm-menu-link">
-                        <a href="/static/index.html#contact"> Contact </a>
+                        <a href="/static/index.html#contact"> Contact! </a>
+                    </li>
+                    <li class="header__sm-menu-link">
+                        <a href="/blog"> Blog </a>
                     </li>
                 </ul>
             </div>
