chore: correct link to prototype fund project

--- a/static/index.html
+++ b/static/index.html
@@ -253,8 +253,8 @@
                             by developing a web-application that allows users to represent, visualize and analyse
                             drone-flight data.
                         </p>
-                        <a href="https://prototypefund.de/en/" target="_blank"><button class="btn"
-                                href="https://prototypefund.de/en/" role="button">More Info</button></a>
+                        <a href="https://prototypefund.de/project/searchwing/" target="_blank"><button class="btn"
+                                href="https://prototypefund.de/project/searchwing/" role="button">More Info</button></a>
                     </div>
                 </div>
             </div>
