chore(static): update work experience

--- a/static/index.html
+++ b/static/index.html
@@ -209,9 +209,9 @@
                                 href="https://hellofresh.de">HelloFresh</a></h2>
                         <h4 class="experience-item-dates text-main-color">Sep 2020 - Present</h4>
                         <ul class="experience-item-description text-main-color">
-                            <li>I did this</li>
-                            <li>And that</li>
-                            <li>And that</li>
+                            <li>Work in an agile team of six engineers in charge of building backend services in the fulfillment domain</li>
+                            <li>Write and design event-based microservices using Kafka, Python and PostgreSQL</li>
+                            <li>Moderate internal tech-forums for knowledge sharing</li>
                         </ul>
                     </div>
                     <div class="experience-logo"><img src="/static/assets/png/hellofresh.png"></div>
@@ -222,9 +222,9 @@
                                 href="https://searchwing.org">Searchwing</a></h2>
                         <h4 class="experience-item-dates text-main-color">Oct 2019 - Present</h4>
                         <ul class="experience-item-description text-main-color">
-                            <li>I did this</li>
-                            <li>And that</li>
-                            <li>And that</li>
+                            <li>Design and development of the LogViewer app: A fullstack application that presents and manages drone timeseries data</li>
+                            <li>Development of a calibration algorithm for drone motion sensors</li>
+                            <li>Write software for the on-board computer</li>
                         </ul>
                     </div>
                     <div class="experience-logo"><img src="/static/assets/png/searchwing.png"></div>
