--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,8 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://css.gg/more-o.css' rel='stylesheet'>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
@@ -283,7 +285,9 @@
                         <textarea required cols="30" rows="10" class="contact-form-input"
                             placeholder="Enter Your Message" name="message" id="message"></textarea>
                     </div>
-                    <input class="btn contact-form-submit-btn" type="submit" value="Submit">
+                    <div align="center" id="recaptcha" class="g-recaptcha" data-sitekey="6Lccd2wpAAAAAKih89NDLXeSVR_1bEM3ojSftjLp" data-action="LOGIN" data-callback="callback"></div>
+                    <br/>
+                    <input id="submit-btn" class="btn contact-form-submit-btn" type="submit" value="Submit" disabled>
                 </form>
             </div>
         </div>
@@ -319,6 +323,13 @@
                     Martinez</a></div>
         </div>
     </section>
+    <script type="text/javascript">
+        function callback() {
+          const submitButton = document.getElementById("submit-btn");
+          console.log("callback called")
+          submitButton.removeAttribute("disabled");
+        }
+      </script>
 </body>
 
 </html>
