feat: add secret field in form to avoid bots

--- a/static/index.html
+++ b/static/index.html
@@ -280,6 +280,11 @@
                         <input required class="contact-form-input" id="post-email" type="email"
                             placeholder="Enter your email" name="email">
                     </div>
+                    <div hidden class="contact-form-field">
+                        <label class="contact-form-label" for="phone">Phone</label>
+                        <input class="contact-form-input" id="post-phone" type="phone"
+                            placeholder="Enter your phone number" name="phone">
+                    </div>
                     <div class="contact-form-field">
                         <label class="contact-form-label" for="message">Message</label>
                         <textarea required cols="30" rows="10" class="contact-form-input"
