feat: check re-captcha response server-side

--- a/static/index.html
+++ b/static/index.html
@@ -290,7 +290,7 @@
                         <textarea required cols="30" rows="10" class="contact-form-input"
                             placeholder="Enter Your Message" name="message" id="message"></textarea>
                     </div>
-                    <div align="center" id="recaptcha" class="g-recaptcha" data-sitekey="6Lccd2wpAAAAAKih89NDLXeSVR_1bEM3ojSftjLp" data-action="LOGIN" data-callback="callback"></div>
+                    <div align="center" id="recaptcha" class="g-recaptcha" data-sitekey="6Lccd2wpAAAAAKih89NDLXeSVR_1bEM3ojSftjLp" data-action="CONTACT" data-callback="callback"></div>
                     <br/>
                     <input id="submit-btn" class="btn contact-form-submit-btn" type="submit" value="Submit" disabled>
                 </form>
